# snapwire

./: .dockerignore  .env.example  .gitignore  .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  agent_firewall.py  agentic_firewall.db  app.py  check_setup.py  constitution.json  docker-compose.yml  generate_hero_cve.py  generate_nist_commentary.py  main.py  mcp.json  mcp_server.py  models.py  nist_evidence.json  nist_rfi_responses.txt  pyproject.toml  railway.toml  replit.md  replit_auth.py  seed_demo.py  snapwire.db  snapwire_audit.py  snapwire_cli.py  snapwire_demo.py
.github/: PULL_REQUEST_TEMPLATE.md
attached_assets/: Pasted-9s-Run-python-m-pytest-tests-v-tb-short-cov-cov-report-_1773343533214.txt  Pasted-As-you-finalize-the-Snapwire-platform-for-the-2026-mark_1772232785788.txt  Pasted-Being-vendor-agnostic-is-not-just-a-feature-in-the-2026_1772032932378.txt  Pasted-For-a-high-end-AI-infrastructure-brand-like-Snapwire-yo_1771548357646.txt  Pasted-Gemini-said-Idea-Review-Snapwire-The-Real-Time-Circuit-_1771802830128.txt  Pasted-Gemini-said-In-February-2026-the-most-realistic-path-to_1771509344234.txt  Pasted-Here-is-the-consolidated-Pre-Launch-Manifest-for-Februa_1772220735437.txt  Pasted-Here-is-the-consolidated-list-of-changes-and-a-legal-st_1772054897079.txt  Pasted-Here-is-the-formal-technical-response-to-the-NIST-March_1772161098361.txt  Pasted-I-hear-you-perfectly-In-the-fast-moving-AI-landscape-of_1772055427204.txt  Pasted-In-2026-the-Golden-Metric-for-an-AI-security-acquisitio_1771648263485.txt  Pasted-In-2026-the-Replit-Agent-3-and-the-recently-launched-Pr_1772889356686.txt  Pasted-In-2026-the-Utility-First-approach-is-the-safest-and-mo_1771531695143.txt  Pasted-In-2026-the-legal-landscape-for-AI-is-defined-by-Duty-o_1771647009311.txt  Pasted-In-2026-the-legal-landscape-has-shifted-from-Who-is-at-_1772168527111.txt  Pasted-In-2026-the-legal-standard-for-AI-isn-t-about-safety-it_1772077562922.txt  Pasted-In-2026-the-market-has-shifted-from-AI-Hype-to-Liabilit_1772221108540.txt  Pasted-In-2026-the-short-answer-is-No-these-specific-changes-a_1771624721343.txt  Pasted-In-2026-the-strategy-is-officially-Go-The-NIST-AI-Agent_1772160938996.txt  Pasted-In-February-2026-Replit-Agent-3-is-your-Unicorn-Engine-_1772216026606.txt  Pasted-In-February-2026-setting-up-Slack-Socket-Mode-on-Replit_1772217218807.txt  Pasted-In-February-2026-the-AI-regulatory-landscape-has-reache_1772218386369.txt  Pasted-In-February-2026-the-Metering-not-judging-pivot-is-exac_1771531888849.txt  Pasted-In-February-2026-the-OpenClaw-Security-Crisis-has-prove_1771535421109.txt  Pasted-In-February-2026-the-OpenClaw-security-crisis-has-taugh_1771476571070.txt  Pasted-In-February-2026-the-developer-to-acquisition-pipeline-_1771645671188.txt  Pasted-In-the-2026-Lean-Exit-model-your-developers-do-not-need_1772220088216.txt  Pasted-In-the-final-version-of-the-Agentic-Firewall-the-two-la_1771454320655.txt  Pasted-Moving-to-a-Reverse-Proxy-architecture-is-the-single-mo_1772160807903.txt  Pasted-Moving-to-a-public-Open-Core-model-in-the-February-2026_1771643770149.txt  Pasted-Part-1-Terms-of-Service-TOS-Effective-Date-February-18-_1771476697988.txt  Pasted-Primary-Objective-Transition-from-SaaS-Dashboard-to-Hea_1772227086531.txt  Pasted-Run-python-m-pytest-tests-v-tb-short-cov-cov-report-ter_1773346478572.txt  Pasted-Run-python-m-pytest-tests-v-tb-short-cov-cov-report-ter_1773348330441.txt  Pasted-Since-it-is-Saturday-March-7th-and-the-NIST-2025-0035-R_1772897075439.txt  Pasted-Since-you-are-building-Snapwire-which-is-already-a-high_1772501444615.txt  Pasted-TERMS-OF-SERVICE-SENTRYPORT-LAST-UPDATED-FEBRUARY-19-20_1771536040489.txt  (+82 more)
community/: _grader_runner.py  achievements.py  grader.py  routes.py
sdk/: README.md  pyproject.toml
sdk/agentic_firewall/: __init__.py  client.py
(+93 files in other folders)
