[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snapwire"
version = "0.1.0"
description = "Snapwire — The Firewall for AI Agents"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "anthropic>=0.79.0",
    "flask>=3.1.2",
    "flask-dance>=7.1.0",
    "flask-limiter>=4.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "fpdf2>=2.8.6",
    "gunicorn>=25.1.0",
    "oauthlib>=3.3.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "slack-bolt>=1.27.0",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
    "werkzeug>=3.1.5",
]
