[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentic-firewall"
version = "1.0.0"
description = "Python SDK for the Agentic Firewall - AI agent security platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://github.com/agenticfirewall/agentic-firewall"
Documentation = "https://docs.agenticfirewall.ai"
